tests/models/struct/unnamed/i16/fail/alias.rs
use dade::model;
#[model]
struct TestModel (
   #[field(alias = "val")]
    i16
);
fn main() {}
